[gd_scene load_steps=13 format=3 uid="uid://bpxsl8b3dop1t"]

[ext_resource type="Script" path="res://scenes/cinematique_fin.gd" id="1_1ehd3"]
[ext_resource type="Texture2D" uid="uid://cd508ddlhgs1l" path="res://asset/Cinématique/cinématique fin.png" id="1_ljiel"]
[ext_resource type="Texture2D" uid="uid://x7baoj2ujyiw" path="res://asset/Bouton start/exit.png" id="2_1rowp"]

[sub_resource type="AtlasTexture" id="75"]
atlas = ExtResource("1_ljiel")
region = Rect2(0, 0, 330, 200)

[sub_resource type="AtlasTexture" id="76"]
atlas = ExtResource("1_ljiel")
region = Rect2(330, 0, 330, 200)

[sub_resource type="AtlasTexture" id="77"]
atlas = ExtResource("1_ljiel")
region = Rect2(660, 0, 330, 200)

[sub_resource type="AtlasTexture" id="78"]
atlas = ExtResource("1_ljiel")
region = Rect2(990, 0, 330, 200)

[sub_resource type="AtlasTexture" id="79"]
atlas = ExtResource("1_ljiel")
region = Rect2(1320, 0, 330, 200)

[sub_resource type="AtlasTexture" id="80"]
atlas = ExtResource("1_ljiel")
region = Rect2(1650, 0, 330, 200)

[sub_resource type="AtlasTexture" id="81"]
atlas = ExtResource("1_ljiel")
region = Rect2(1980, 0, 330, 200)

[sub_resource type="AtlasTexture" id="82"]
atlas = ExtResource("1_ljiel")
region = Rect2(2310, 0, 330, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_hgotf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("75")
}, {
"duration": 1.0,
"texture": SubResource("76")
}, {
"duration": 1.0,
"texture": SubResource("77")
}, {
"duration": 1.0,
"texture": SubResource("78")
}, {
"duration": 1.0,
"texture": SubResource("79")
}, {
"duration": 1.0,
"texture": SubResource("80")
}, {
"duration": 1.0,
"texture": SubResource("81")
}, {
"duration": 1.0,
"texture": SubResource("82")
}],
"loop": true,
"name": &"cinématique win",
"speed": 5.0
}]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_1ehd3")

[node name="Cinématique fin win" type="AnimatedSprite2D" parent="."]
position = Vector2(544, 338)
scale = Vector2(3.11553, 2.95752)
sprite_frames = SubResource("SpriteFrames_hgotf")
animation = &"cinématique win"

[node name="TextureButton" type="TextureButton" parent="Cinématique fin win"]
offset_left = 46.862
offset_top = -89.6022
offset_right = 121.862
offset_bottom = 29.3978
texture_hover = ExtResource("2_1rowp")

[connection signal="animation_finished" from="Cinématique fin win" to="." method="_on_cinématique_fin_win_animation_finished"]
[connection signal="pressed" from="Cinématique fin win/TextureButton" to="." method="_on_texture_button_pressed"]
